# fsp-cup-2023-part-two

./: notepad.ipynb  pyproject.toml
